--- a/index.html
+++ b/index.html
@@ -181,81 +181,77 @@
 </section>
 <section class="m-5">
     <div class="container">
-        <div class="row d-flex">
-            <div class="col-lg-6 ">
-                    <div  class="p-4" style="background-color: #ffffff;">
-                        <h1 class="mb-4">
-                            <span class="d-lg-block">Decentralized storage</span>
-                           <span class="d-lg-block">built for</span>
-                           <span class="d-lg-block" style="color: #651FFF;">better privacy.</span>
-                           </h1>
-                        <div class="mb-4">
-                           <span>Store data securely on over 13k nodes worldwide instead of just a few vulnerable data centers with privacy. Every file is encrypted, split into pieces, and stored on a global network of nodes, making data breaches and downtime a thing of the past.</span>
-                        </div>
-                        <div class="d-flex flex-column flex-lg-row justify-content-between">                
-                            <div class="p-3">
-                               <img src="./images/page3/1.svg" alt="">
-                               <h3 class="my-3">Upgrade your storage.</h3>
-                               <span class="d-md-block">Better security, performance and cost, Deupload is the better way to store data.</span>
-                               <a href="#" class="d-flex align-items-center mx-0 ">
+        <div class="row d-flex flex-wrap">
+            <!-- Left Content Section -->
+            <div class="col-lg-6 mb-4">
+                <div class="p-4 bg-white">
+                    <h1 class="mb-4">
+                        <span class="d-lg-block">Decentralized storage</span>
+                        <span class="d-lg-block">built for</span>
+                        <span class="d-lg-block text-primary">better privacy.</span>
+                    </h1>
+                    <p>Store data securely on over 13k nodes worldwide instead of just a few vulnerable data centers with privacy. Every file is encrypted, split into pieces, and stored on a global network of nodes, making data breaches and downtime a thing of the past.</p>
+                    
+                    <div class="d-flex flex-column flex-lg-row gap-4">
+                        <!-- Card 1 -->
+                        <div class="p-3 text-center text-lg-start">
+                            <img src="./images/page3/1.svg" alt="Storage" class="img-fluid">
+                            <h3 class="my-3">Upgrade your storage.</h3>
+                            <p>Better security, performance, and cost. Deupload is the better way to store data.</p>
+                            <a href="#" class="d-flex align-items-center gap-2 text-decoration-none">
                                 <span>Learn use cases</span>
                                 <img src="./images/page3/arrow-blue.svg" alt="">
-                               </a>
-                            </div>
-                            <div class="p-3">
-                                <img src="./images/page3/2.svg" alt="">
-                               <h3 class="my-3">Carbon neutral storage.</h3>
-                               <span class="d-md-block">Utilizing existing unused storage capacity on recycled hardware around the world.</span>
-                               <a href="#" class="d-flex align-items-center mx-0">
-                                <span>Environment impact</span>
+                            </a>
+                        </div>
+
+                        <!-- Card 2 -->
+                        <div class="p-3 text-center text-lg-start">
+                            <img src="./images/page3/2.svg" alt="Carbon Storage" class="img-fluid">
+                            <h3 class="my-3">Carbon neutral storage.</h3>
+                            <p>Utilizing existing unused storage capacity on recycled hardware around the world.</p>
+                            <a href="#" class="d-flex align-items-center gap-2 text-decoration-none">
+                                <span>Environmental impact</span>
                                 <img src="./images/page3/arrow-green.svg" alt="">
-                               </a>
-                            </div>
+                            </a>
                         </div>
                     </div>
+                </div>
             </div>
-            <div class="col-lg-6">
-                <div class=" p-4 d-flex flex-column gap-4 flex-items-stretch" style="background-color: #ffffff;">
-                    <div>
-                        <div class="d-flex align-items-start gap-3 my-4">
-                            <div><img src="./images/page2/lightweight.png" alt=""></div>
-                            <div>
-                                <h3>Distributed network</h3>
-                            <span>
-                                An object is never in one place. Data is split into 80 pieces, and distributed to uncorrelated Nodes. When you call for the data, it’s automatically reconstituted in an instant.
-                            </span>
-                            </div>
-                        </div> 
-                    </div>
-                    <div>
-                        <div class="d-flex align-items-start gap-3 my-4">
-                            <div><img src="./images/page2/lightweight.png" alt=""></div>
-                            <div>
-                                <h3>Distributed network</h3>
-                            <span>
-                                An object is never in one place. Data is split into 80 pieces, and distributed to uncorrelated Nodes. When you call for the data, it’s automatically reconstituted in an instant.
-                            </span>
-                            </div>
+
+            <!-- Right Content Section -->
+            <div class="col-lg-6 mb-5 mt-5">
+                <div class="p-4 bg-white d-flex flex-column gap-4">
+                    <!-- Feature 1 -->
+                    <div class="d-flex align-items-start gap-3 m-3">
+                        <img src="./images/page2/lightweight.png" alt="Distributed Network" class="img-fluid">
+                        <div>
+                            <h3>Distributed network</h3>
+                            <p>Data is split into 80 pieces and distributed to uncorrelated Nodes. When you call for the data, it’s automatically reconstituted in an instant.</p>
                         </div>
                     </div>
-                    <div>
-                        <div class="d-flex align-items-start gap-3 my-4">
-                            <div><img src="./images/page2/lightweight.png" alt=""></div>
-                            <div>
-                                <h3>World-wide Availability</h3>
-                            <span>
-                                Data is stored on Nodes that are selected by reputation and local latency. The fastest Nodes from this set are chosen to store pieces, ensuring quick access to your data.
-                            </span>
-                            </div>
+
+                    <!-- Feature 2 (Duplicate Fixed) -->
+                    <div class="d-flex align-items-start gap-3 m-3">
+                        <img src="./images/page2/lightweight.png" alt="Secure Storage" class="img-fluid">
+                        <div>
+                            <h3>Highly Secure</h3>
+                            <p>Data is stored in multiple locations, making it nearly impossible for a single point of failure to occur.</p>
                         </div>
                     </div>
-                 </div>
-              </div>
-                
-            </div>
+
+                    <!-- Feature 3 -->
+                    <div class="d-flex align-items-start gap-3 m-3">
+                        <img src="./images/page2/lightweight.png" alt="Global Availability" class="img-fluid">
+                        <div>
+                            <h3>World-wide Availability</h3>
+                            <p>Data is stored on Nodes selected by reputation and latency. The fastest Nodes ensure quick access to your data.</p>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </div>
     </div>
-</section>   
+</section>
 
 <!-- Remove the container if you want to extend the Footer to full width. -->
 
